# FullStack

./: .eslintrc  .gitattributes  .gitignore  .gitmodules  .prettierrc  .tokeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  package.json  renovate.json
client/: .babelrc  .env.development  angular.json  package.json  proxy.conf.json  tsconfig.base.json  tsconfig.json
client/src/: Container.tsx  Routes.tsx  index.html  index.tsx  serviceWorker.ts
client/src/environments/: environment.ts
client/src/utils/: connect.ts  index.ts  intl.ts
client/typings/: Fonts.d.ts
client_angular/: .babelrc  .eslintrc  .prettierrc  package.json  tsconfig.app.json  tsconfig.base.json
client_angular/src/: index.html  main.ts  polyfills.ts
client_react/: .eslintrc
client_react/src/: index.html
server/: Cargo.toml  package.json  tsconfig.json
server/src/: app.ts  main.rs  server.ts
server/src/arg_parse/: errors.rs  mod.rs
server/src/config/: oauth2orize-server.ts  oauth2orize-strategy.ts  passport-consumer.ts  passport-provider.ts  smtp-transporter.ts
server/src/controllers/: article.ts  utils.ts  version.ts
server/src/logging/: errors.rs  mod.rs
server/src/repository/: utils.ts
server/src/routes/: article.ts  version.ts
server/src/server/: errors.rs  mod.rs
server/src/utils/: random.ts  secrets.ts  time.ts
shared/: .eslintrc  package.json  tsconfig.json
shared/src/: connect.ts  constants.ts  date.ts  fetch.ts  hostUrls.ts  intl.ts  preferences.ts  secrets.ts  sleep.ts  storage.ts  store.ts  toast.ts  utils.ts
tools/: README.md
(+118 files in other folders)
