[package]
name = "rust_backend"
version = "0.1.0"
authors = ["lunarium <deltaware@cock.li>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.8.2"
log = "0.4.13"
mongodb = "1.1.1"
serde = "1.0.120"
structopt = "0.3.21"
test-env-log = "0.2.5"
thiserror = "1.0.23"
